--- a/css/master.css
+++ b/css/master.css
@@ -30,11 +30,12 @@ ul {
 /* Start Dashboard */
 /* Start Sidebar */
 .page {
-  min-height: 200vh;
   background-color: #f1f5f9;
+
+  min-height: 150vh;
 }
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 13px;
 }
 ::-webkit-scrollbar-track {
   background-color: white;
@@ -125,7 +126,7 @@ ul {
 .content {
   overflow: hidden;
 }
-.head {
+.content .head {
   padding: 5px;
   height: 70px;
 }
@@ -593,3 +594,626 @@ ul {
 
 /* End Table */
 /* End Dashboard */
+
+/* Start Settings */
+/* Start Ckeck Conponint */
+.toggle-checkbox {
+  -webkit-appearance: none;
+  appearance: none;
+  display: none;
+}
+.toggle-switch {
+  background-color: #ccc;
+  width: 78px;
+  height: 32px;
+  border-radius: 16px;
+  position: relative;
+  transition: 0.3s;
+  cursor: pointer;
+}
+.toggle-switch::before {
+  font-family: var(--fa-style-family-classic);
+  content: "\f00d";
+  font-weight: 900;
+  background-color: white;
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  border-radius: 50%;
+  top: 4px;
+  left: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #aaa;
+  transition: 0.3s;
+}
+.toggle-checkbox:checked + .toggle-switch {
+  background-color: var(--blue-color);
+}
+.toggle-checkbox:checked + .toggle-switch::before {
+  content: "\f00c";
+  left: 50px;
+  color: var(--blue-color);
+}
+/* End Ckeck Conponint */
+
+/* Start Control Site */
+.settings-page {
+  grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+}
+@media (max-width: 767px) {
+  .settings-page {
+    grid-template-columns: minmax(100px, 1fr);
+    margin-left: 10px;
+    margin-right: 10px;
+    gap: 10px;
+  }
+}
+.settings-page .site-control textarea {
+  height: 150px;
+  resize: none;
+  border: solid 1px #eee;
+}
+
+/* End Control Site */
+
+/* Start Personal Info */
+
+.personal-info {
+}
+.personal-info .form input {
+  border: solid 1px #eee;
+}
+.personal-info .form:last-child .email {
+  flex: 1;
+}
+.personal-info .form:last-child a {
+  color: var(--blue-color);
+}
+.personal-info .form:last-child a {
+  color: var(--blue-color);
+}
+/* End Personal Info */
+
+/* Start Socail Account */
+.social-boxs i {
+  width: 40px;
+  height: 40px;
+  background-color: #f6f6f6;
+  border: 1px solid #ddd;
+  border-right: none;
+  border-radius: 6px 0 0 6px;
+  transition: 0.3s;
+  outline: none;
+  font-size: 20px;
+}
+.social-boxs input {
+  height: 40px;
+  background-color: #f6f6f6;
+  border: 1px solid #ddd;
+  padding-left: 10px;
+  border-radius: 0 6px 6px 0;
+  outline: none;
+}
+.social-boxs > div:focus-within i {
+  color: black;
+}
+/* End Socail Account */
+
+/* Start  Control Wedgites */
+
+.widgets-control .control input[type="checkbox"] {
+  -webkit-appearance: none;
+  appearance: none;
+  display: none;
+}
+.widgets-control .control label::before {
+  content: "";
+  width: 14px;
+  height: 14px;
+  border: 2px solid var(--grey-color);
+}
+.widgets-control .control input[type="checkbox"]:checked + label::after {
+  transform: scale(1);
+}
+.widgets-control .control label::after {
+  font-family: var(--fa-style-family-classic);
+  content: "\f00c";
+  font-weight: 900;
+  background-color: var(--blue-color);
+  color: white;
+  font-size: 12px;
+  width: 18px;
+  height: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform: scale(0) rotate(360deg);
+  transition: 0.3s;
+}
+.widgets-control .control label::before,
+.widgets-control .control label::after {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  margin-top: -9px;
+  border-radius: 4px;
+}
+.widgets-control .control label {
+  padding-left: 30px;
+  cursor: pointer;
+  position: relative;
+  font-size: 20px;
+}
+/* End Control Wedgits */
+
+/* Start Server */
+.backup-control input[type="radio"] {
+  -webkit-appearance: none;
+  appearance: none;
+}
+.backup-control .date label {
+  padding-left: 30px;
+  cursor: pointer;
+  position: relative;
+}
+.backup-control .date label::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 0;
+  margin-top: -11px;
+  width: 18px;
+  height: 18px;
+  border: 2px solid var(--grey-color);
+  border-radius: 50%;
+}
+.backup-control .date label::after {
+  content: "";
+  position: absolute;
+  left: 5px;
+  top: 5px;
+  width: 12px;
+  height: 12px;
+  background: var(--blue-color);
+  border-radius: 50%;
+  transition: 0.3s;
+  transform: scale(0);
+}
+.backup-control .date input[type="radio"]:checked + label::before {
+  border-color: var(--blue-color);
+}
+.backup-control .date input[type="radio"]:checked + label::after {
+  transform: scale(1);
+}
+.backup-control .servers {
+  border-top: 1px solid #eee;
+  padding-top: 20px;
+}
+@media (max-width: 767px) {
+  .backup-control .servers {
+    flex-wrap: wrap;
+  }
+}
+.backup-control .servers .server {
+  border: 2px solid #eee;
+  position: relative;
+}
+@media (min-width: 767px) {
+  .backup-control .servers .server:not(:last-of-type) {
+    margin-right: 10px;
+  }
+}
+.backup-control .servers .server label {
+  cursor: pointer;
+}
+.backup-control .servers input[type="radio"]:checked + .server {
+  border-color: var(--blue-color);
+  color: var(--blue-color);
+}
+/* End Server */
+/* End Settings */
+
+/* Start Profil */
+
+.profile-page {
+}
+.profile-page .overview img {
+  width: 104px;
+  height: 104px;
+}
+.avatar-box {
+  padding: 50px;
+}
+.avatar-box .prog {
+  width: 150px;
+  height: 6px;
+  margin: 40px auto 15px;
+  border-radius: 16px;
+}
+.avatar-box .prog > span {
+  height: 100%;
+  background-color: red;
+  position: absolute;
+  left: 0;
+  border-radius: 18px;
+}
+@media (min-width: 768px) {
+  .avatar-box {
+    border-right: solid 1px #eee;
+  }
+}
+@media (max-width: 998px) {
+  .overview {
+    flex-direction: column;
+  }
+  .info-box .box {
+    min-width: 250px;
+    flex-wrap: nowrap;
+  }
+}
+@media (max-width: 998px) {
+  .info-box .box > div {
+    width: 100%;
+    text-align: center;
+    align-items: center;
+    font-size: 17px;
+  }
+  .info-box .box .toggle-switch {
+    margin: 10px auto;
+  }
+}
+
+/* Start User Info */
+.info-box .box {
+  flex-wrap: wrap;
+  border-bottom: solid 1px #eee;
+}
+.info-box .box > div {
+  min-width: 250px;
+  padding: 10px 0 0;
+}
+.profile-page .info-box .box:hover {
+  background-color: #f9f9f9;
+}
+.profile-page .info-box .box > div {
+  min-width: 250px;
+  padding: 10px 0 0;
+}
+.profile-page .info-box h4 {
+  font-weight: normal;
+}
+/* Start Training Code */
+.profile-page .info-box .toggle-switch {
+  height: 20px;
+}
+@media (max-width: 767px) {
+  .profile-page .info-box .toggle-switch {
+    margin: auto;
+  }
+}
+.profile-page .info-box .toggle-switch::before {
+  width: 12px;
+  height: 12px;
+  font-size: 8px;
+}
+.profile-page .info-box .toggle-checkbox:checked + .toggle-switch::before {
+  left: 62px;
+}
+/* End Training Code */
+@media (max-width: 767px) {
+  .profile-page .other-data {
+    flex-direction: column;
+  }
+}
+.profile-page .skills-card {
+  flex-grow: 1;
+}
+.profile-page .skills-card ul li {
+  padding: 15px 0;
+}
+.profile-page .skills-card ul li:not(:last-child) {
+  border-bottom: 1px solid #eee;
+}
+.profile-page .skills-card ul li span {
+  display: inline-flex;
+  padding: 4px 10px;
+  background-color: #eee;
+  border-radius: 6px;
+  font-size: 14px;
+}
+.profile-page .skills-card ul li span:not(:last-child) {
+  margin-right: 5px;
+}
+.profile-page .activities {
+  flex-grow: 2;
+}
+.profile-page .activity:not(:last-of-type) {
+  border-bottom: 1px solid #eee;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+}
+.profile-page .activity img {
+  width: 64px;
+  height: 64px;
+  margin-right: 10px;
+}
+@media (min-width: 768px) {
+  .profile-page .activity .date {
+    margin-left: auto;
+    text-align: right;
+  }
+}
+@media (max-width: 767px) {
+  .profile-page .activity {
+    flex-direction: column;
+  }
+  .profile-page .activity img {
+    margin-right: 0;
+    margin-bottom: 15px;
+  }
+  .profile-page .activity .date {
+    margin-top: 15px;
+  }
+}
+/* End User Info */
+
+/* End Profilte */
+
+/* Start Projects */
+.projects-page {
+  grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+  margin-left: 20px;
+  margin-right: 20px;
+}
+@media (max-width: 767px) {
+  .projects-page {
+    grid-template-columns: minmax(200px, 1fr);
+    margin-left: 10px;
+    margin-right: 10px;
+    gap: 10px;
+  }
+  .project h2 {
+    font-weight: normal;
+    font-size: 18px;
+  }
+
+  .project .do {
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+    padding: 10px;
+  }
+  .info .prog-holder {
+    width: 150px;
+  }
+}
+.project .date {
+  position: absolute;
+  right: 10px;
+}
+.team img {
+  border-bottom: solid 1px #eee;
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+  border: solid 3px white;
+}
+
+.project .do {
+}
+.info {
+  border-top: solid 1px #eee;
+}
+.info .prog-holder {
+  position: relative;
+  background-color: #eee;
+
+  height: 8px;
+  border-radius: 6px;
+}
+.info .prog-holder span {
+  position: absolute;
+  height: 100%;
+
+  border-radius: 5px;
+}
+@media (min-width: 768px) {
+  .info .prog-holder {
+    width: 250px;
+  }
+}
+
+/* End Projects */
+
+/* Start Courses */
+
+.courses-page {
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 20px;
+}
+@media (max-width: 767px) {
+  .courses-page {
+    grid-template-columns: minmax(200px, 1fr);
+    margin-left: 10px;
+    margin-right: 10px;
+    gap: 10px;
+  }
+}
+.courses .course {
+  overflow: hidden;
+}
+.course .cover {
+  width: 100%;
+}
+.course .instructor {
+  position: absolute;
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+  border: solid 3px white;
+  top: 10px;
+  left: 10px;
+}
+.courses .course .info .title {
+  width: 100%;
+}
+/* End Courese */
+
+/* Start Friends */
+.friends-page {
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 20px;
+}
+@media (max-width: 767px) {
+  .courses-page {
+    grid-template-columns: minmax(200px, 1fr);
+    margin-left: 10px;
+    margin-right: 10px;
+    gap: 10px;
+  }
+}
+.friends-page .friend .contact i {
+  border-radius: 50%;
+  background-color: var(--blue-color);
+  color: white;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  padding-top: 10px;
+}
+.friends-page .friend:nth-child(2) {
+  padding: 20px 10px;
+}
+.friend .info {
+  padding: 16px 5px 0px;
+}
+/* End Friends */
+
+/* Start Files */
+.files-page {
+  align-items: start;
+  flex-direction: row-reverse;
+}
+@media (max-width: 767px) {
+  .files-page {
+    flex-direction: column;
+    align-items: normal;
+  }
+}
+.files-page .files-stats {
+  min-width: 260px;
+}
+.files-page .files-stats .icon {
+  width: 48px;
+  height: 48px;
+  margin: 5px;
+}
+.files-page .files-stats .blue {
+  background-color: rgb(0 117 255 / 20%);
+}
+.files-page .files-stats .green {
+  background-color: rgb(34 197 94 / 20%);
+}
+.files-page .files-stats .red {
+  background-color: rgb(244 67 54 / 20%);
+}
+.files-page .files-stats .orange {
+  background-color: rgb(245 158 11 / 20%);
+}
+.size {
+  margin-left: auto;
+}
+.files-page .files-stats .upload {
+  margin: 15px auto;
+  padding: 11px 15px;
+  transition: 0.3s;
+}
+.files-page .files-stats .upload:hover i {
+  animation: go-up 0.8s infinite linear;
+}
+.files-page .files-content {
+  flex: 1;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 20px;
+}
+.files-page .files-content .icon img {
+  width: 64px;
+  height: 64px;
+  transition: 0.3s;
+}
+.files-page .files-content .icon:hover img {
+  transform: rotate(5deg);
+}
+/* End Files */
+
+/* Start Plan */
+.plans-page {
+  grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+}
+@media (max-width: 767px) {
+  .plans-page {
+    grid-template-columns: minmax(250px, 1fr);
+    margin-left: 10px;
+    margin-right: 10px;
+    gap: 10px;
+  }
+}
+.plans-page .plan .top {
+  border: 3px solid white;
+  outline: 3px solid transparent;
+}
+.plans-page .plan.green .top {
+  outline-color: var(--green-color);
+}
+.plans-page .plan.blue .top {
+  outline-color: var(--blue-color);
+}
+.plans-page .plan.orange .top {
+  outline-color: var(--orange-color);
+}
+.plans-page .plan .price {
+  position: relative;
+  font-size: 40px;
+  width: fit-content;
+  margin: auto;
+}
+.plans-page .plan .price span {
+  position: absolute;
+  left: -20px;
+  top: 0;
+  font-size: 25px;
+}
+.plans-page .plan ul li {
+  padding: 15px 0;
+  display: flex;
+  align-items: center;
+  font-size: 15px;
+  border-bottom: 1px solid #eee;
+}
+.plans-page .plan ul li .yes {
+  color: var(--green-color);
+}
+.plans-page .plan ul li i:not(.yes, .help) {
+  color: var(--red-color);
+}
+.plans-page .plan ul li i:first-child {
+  font-size: 18px;
+  margin-right: 5px;
+}
+.plans-page .plan ul li .help {
+  color: var(--grey-color);
+  margin-left: auto;
+  cursor: pointer;
+}
+/* End Plan */
+@keyframes go-up {
+  0%,
+  100% {
+    transform: translateY(0%);
+  }
+  50% {
+    transform: translateY(-5px);
+  }
+}
